plugins {
  id "java"
  id "com.vanniktech.maven.publish" version "0.25.3"
}

group "io.github.gzsombor"
version "1.1.2-SNAPSHOT"

java {
  sourceCompatibility = JavaVersion.VERSION_11
  targetCompatibility = JavaVersion.VERSION_11
}

repositories {
  mavenCentral()
}

dependencies {
  implementation "com.google.code.gson:gson:2.8.5"
  testImplementation "junit:junit:4.12"
}

sourceSets {
  jmh {
    java.srcDirs = ['src/jmh/java']
    compileClasspath += sourceSets.main.output + configurations.jmhCompileClasspath
    runtimeClasspath += sourceSets.main.output + configurations.jmhRuntimeClasspath
  }
}

configurations {
  jmhImplementation.extendsFrom implementation
  jmhAnnotationProcessor
  jmhCompileClasspath.extendsFrom jmhImplementation
  jmhRuntimeClasspath.extendsFrom jmhImplementation
}

dependencies {
  jmhImplementation "org.openjdk.jmh:jmh-core:1.37"
  jmhAnnotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:1.37"
}

// Wire the annotation processor for the jmh source set
compileJmhJava.options.annotationProcessorPath = configurations.jmhAnnotationProcessor

// Simple task to run JMH benchmarks
task jmh(type: JavaExec, dependsOn: compileJmhJava) {
  group = 'benchmark'
  description = 'Run JMH benchmarks (org.openjdk.jmh.Main)'
  mainClass = 'org.openjdk.jmh.Main'
  classpath = sourceSets.jmh.runtimeClasspath
  // pass any args through via -PjmhArgs='"-i 3 -wi 3 -f 1"' or configure here
  doFirst {
    if (project.hasProperty('jmhArgs')) {
      def parts = project.property('jmhArgs').toString().split('\\s+') as List
      setArgs(parts)
    }
  }
}

test {
  testLogging {
    events "passed", "skipped", "failed"
    exceptionFormat "full"
    showStandardStreams = true
  }
}

mavenPublishing {
  publishToMavenCentral()
  signAllPublications()

  pom {
    name = "json-logic-java"
    description = "A native Java implementation of the json-logic project"
    url = "https://github.com/gzsombor/json-logic-java"

    licenses {
      license {
        name = "MIT License"
        url = "https://github.com/gzsombor/json-logic-java/blob/master/LICENSE"
      }
    }

    developers {
      developer {
        id = "jamsesso"
        name = "Sam Jesso"
        url = "https://github.com/jamsesso/"
      }
      developer {
        id = "gzsombor"
        name = "Zsombor Gegesy"
        url = "https://github.com/gzsombor/"
      }
    }

    scm {
      url = "https://github.com/gzsombor/json-logic-java/"
      connection = "scm:git:git://github.com/gzsombor/json-logic-java.git"
      developerConnection = "scm:git:ssh://git@github.com/gzsombor/json-logic-java.git"
    }
  }
}
